feat: 병원 상세 조회 및 병원 등록 요청 기능 구현
- 병원 목록(hospitals) 및 상세 페이지(detail) UI 추가
- HospitalRequest 엔티티, Repository, Service 로직 구현
- HospitalRequestController 생성 및 페이지 매핑
- 병원 검색 조건(SearchCondition) DTO 추가